2007-06-25  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Check for MSG_WAITALL, since it does not exist on
	Cygwin.

	* native/jni/java-nio/gnu_java_nio_VMChannel.c 
	(Java_gnu_java_nio_VMChannel_receive): Define MSG_WAITALL as 0 if 
	it does not exist.

2007-06-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #30377
	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(Java_gnu_java_nio_VMChannel_available): Retry using fstat if ioctl
	fails with ENOTTY.

2007-06-22  Tania Bento  <tbento@redhat.com>

	* java/util/Currency.java:  
	(getInstance (Locale)): Check that the country of the
	locale given is valid.  If it is not, throw an
	IllegalArgumentException.

2007-06-22  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/peer/GLightweightPeer.java
	* gnu/java/awt/peer/gtk/GdkRobotPeer.java
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	* gnu/java/awt/peer/gtk/GtkFramePeer.java
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
	* gnu/java/awt/peer/qt/QtComponentPeer.java
	* gnu/java/awt/peer/qt/QtFramePeer.java
	* gnu/java/awt/peer/qt/QtWindowPeer.java
	* gnu/java/awt/peer/swing/SwingComponentPeer.java
	* gnu/java/awt/peer/swing/SwingWindowPeer.java
	* gnu/java/awt/peer/x/XFramePeer.java:
	Removed @Override annotations from some interface implementation
	methods to ensure 1.5 compatibility.

2007-06-22  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* include/jni.h (JNINativeInterface): Renamed to
	JNINativeInterface_, added const to arguments where necessary.
	(JNIInvokeInterface): Renamed to JNIInvokeInterface_.

2007-06-22  Roman Kennke  <roman@kennke.org>

	* sun/awt/CausedFocusEvent.java: New class. Needed for compatibility
	in java.awt.peer.
	* java/awt/Dialog.java
	(ModalExclusionType): New enum.
	(ModalityType): New enum.
	* java/awt/Toolkit.java
	(isModalExclusionTypeSupported): New abstract method.
	(isModalityTypeSupported): New abstract method.
	* java/awt/peer/ComponentPeer.java
	(requestFocus): New method.
	* java/awt/peer/FramePeer.java